# Dark-Pattern-Auditor

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
docs/: architecture.md
examples/: clean_page.html  sample_dark_page.html
src/dpa/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  fetcher.py  models.py  prompts.py  report.py  security.py  server.py  service.py  taxonomy.py
tests/: conftest.py  test_analyzer_mock.py  test_fetcher.py  test_models.py  test_report.py  test_security.py  test_taxonomy.py
web/: app.js  index.html  style.css
