[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-pattern-auditor"
version = "0.1.0"
description = "AI-powered auditor that detects deceptive UX (dark patterns) on any web page."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ansh Patwa" }]
keywords = ["dark-patterns", "deceptive-design", "ux", "audit", "ai", "claude", "accessibility", "ethics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5.0"]

[project.urls]
Homepage = "https://github.com/anshpatwa/Dark-Pattern-Auditor"
Repository = "https://github.com/anshpatwa/Dark-Pattern-Auditor"
Issues = "https://github.com/anshpatwa/Dark-Pattern-Auditor/issues"

[project.scripts]
dpa = "dpa.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer/FastAPI declare options via call expressions in defaults (idiomatic, intended).
ignore = ["E501", "B008"]
